database config done and models created

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=Json_Placeholder
+spring.config.import=classpath:application-local_only.yaml
+
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.password=${spring.data.mysql.password}
+spring.datasource.username=${spring.data.mysql.username}
+spring.datasource.url=${spring.data.mysql.url}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.jpa.show-sql=true
+spring.data.jdbc.dialect=mysql
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
